update webpack configuration

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="main.js" defer></script>
+    <!-- <script src="main.js" defer></script> -->
 
 </head>
 <body>
-    <div id="haha">player1</div>
+    <div id="player-turn">player1</div>
 
     <div class="game-grid" id="game-grid">
         <div class="items"></div>
