add logic to the game

--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <style href='./src/style.css'></style> -->
     <!-- <script src="main.js" defer></script> -->
 
 </head>
 <body>
-    <div id="player-turn">player1</div>
+    <div id="player-turn"></div>
 
     <div class="game-grid" id="game-grid">
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
+        <div class="items" data-index="0"></div>
+        <div class="items" data-index="1"></div>
+        <div class="items" data-index="2"></div>
+        <div class="items" data-index="3"></div>
+        <div class="items" data-index="4"></div>
+        <div class="items" data-index="5"></div>
+        <div class="items" data-index="6"></div>
+        <div class="items" data-index="7"></div>
+        <div class="items" data-index="8"></div>
 
     </div>
     <div class="win">wins:</div>
