--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="player-turn"></div>
 
     <div class="game-grid" id="game-grid">
+        <!-- i recommended you create these with js -->
         <div class="items" data-index="0"></div>
         <div class="items" data-index="1"></div>
         <div class="items" data-index="2"></div>
