update webpack config

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <style href='./src/style.css'></style> -->
     <!-- <script src="main.js" defer></script> -->
 
-</head>
+<script defer src="main.js"></script></head>
 <body>
     <div id="player-turn"></div>
 
