--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="items" data-index="6"></div>
         <div class="items" data-index="7"></div>
         <div class="items" data-index="8"></div>
-
     </div>
     <div class="win">wins:</div>
+    <div id="reset-btn">Reset<div>
 </body>
 </html>
